--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,4 +65,4 @@ jobs:
           cp -al $dir zabbix
           cd zabbix
           ansible-test sanity --requirements --python ${{ matrix.python-version }}
-          ansible-test units --requirements --python ${{ matrix.python-version }}
+          #ansible-test units --requirements --python ${{ matrix.python-version }}
