--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,22 +18,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8']
-        ansible-version: ['2.11', '2.12', '2.13']
+        python-version: ['3.10']
+        ansible-version: ['2.14', '2.15', '2.16', '2.17']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout project
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Cache pip modules
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         env:
           cache-name: cache-pip
         with:
@@ -42,7 +42,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}-python-${{ matrix.python-version }}
 
       - name: Cache ansible setup
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         env:
           cache-name: cache-ansible
         with:
@@ -53,7 +53,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install ansible and deps
         run: |
-          pip install ansible-base dnspython parameterized pyyaml
+          pip install ansible-core==${{ matrix.ansible-version }}.* dnspython parameterized pyyaml
           ansible-galaxy collection install community.internal_test_tools pfsensible.core
 
       - name: Run ansible tests
@@ -62,7 +62,7 @@ jobs:
           dir=$(pwd)
           mkdir -p ~/.ansible/collections/ansible_collections/pfsensible
           cd ~/.ansible/collections/ansible_collections/pfsensible
-          cp -al $dir zabbix
-          cd zabbix
+          cp -al $dir ${{ github.event.repository.name }}
+          cd ${{ github.event.repository.name }}
           ansible-test sanity --requirements --python ${{ matrix.python-version }}
           #ansible-test units --requirements --python ${{ matrix.python-version }}
